<resources>
    <!--  Activity and Fragment labels  -->
    <string name="app_name">Quiet Time</string>
    <string name="new_quiet_time">New Quiet Time</string>
    <string name="editing_quiet_time">Editing %s</string>

    <!--  Quiet Time Item values  -->
    <string name="qt_item_start_time">Start Time</string>
    <string name="qt_item_end_time">End Time</string>
    <string name="qt_item_end_time_next_day">End Time (next day):</string>
    <string name="qt_item_time_next_day">%s next day</string>
    <string name="qt_item_edit_all">Edit All</string>

    <!--  Days of Week  -->
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="no_date">Invalid Date</string>

    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="sunday_short">Sun</string>

    <!--  Hints  -->
    <string name="hint_enter_title">Title</string>

    <!--  Menu Items  -->
    <string name="main_menu_about">About</string>

    <!--  Descriptions  -->
    <string name="qt_item_edit_or_close_button_description">Edit or Close</string>

    <!--  Dialogs  -->
    <string name="deletion_dialog">Are you sure you want to delete %s?</string>
    <string name="collision_dialog_start">This quiet time overlaps with the following quiet times:</string>
    <string name="collision_dialog_end">Your phone might go out of silent mode unexpectedly. Are you sure you want to save it as it is?</string>

    <!--  Notification  -->
    <string name="notification_channel_name">Quiet Times</string>
    <string name="notification_channel_description">Show a notification when a quiet time starts or ends</string>
    <string name="notification_title">Quiet Time for %s</string>
    <string name="notification_text_silent">Your phone will now stay quiet.</string>
    <string name="notification_text_not_silent">Your phone is no longer quiet.</string>
    <!--  Generic  -->
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="all_day">All day</string>
    <string name="every_day">Every day</string>
    <string name="main_menu_add">New Quiet Time</string>
    <string name="no_quiet_times">There are no quiet times scheduled right now.\n\n Tap the add button to create a Quiet Time.</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mute">Mute</string>
    <string name="vibrate">Vibrate</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="repeat">Repeats every:</string>
    <string name="ok">OK</string>

    <string name="about_title">Quiet Time</string>
    <string name="about_description">
        &lt;small>&lt;br>v1.0.3&lt;br>Quiet Time by Fırat Yıldız&lt;br>&lt;cite>App Icon courtesy of svgrepo.com&lt;/cite>&lt;/small>
        &lt;br>&lt;br>
        If you like the app, leave a rating on Google Play Store!
    </string>

    <!--  Permission  -->
    <string name="notification_permission">This app needs do not disturb permissions.</string>
    <string name="permission_error">Settings for the permission could not be found.</string>
    <string name="permission_setting_not_found">Do not disturb permission could not be found. App may not work as expected.</string>
</resources>