<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addedit_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".fragments.AddEditFragment"
    tools:layout_marginTop="?attr/actionBarSize">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_quiet_time_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_quiet_time_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_enter_title"
            android:imeOptions="normal|actionDone"
            android:inputType="text"
            android:maxLength="64" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/edit_repeat_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/repeat"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_quiet_time_title_layout" />

    <LinearLayout
        android:id="@+id/edit_days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_repeat_label">

        <CheckBox
            android:id="@+id/edit_day1"
            style="@style/VerticalRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monday_short" />

        <CheckBox
            android:id="@+id/edit_day2"
            style="@style/VerticalRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/tuesday_short" />

        <CheckBox
            android:id="@+id/edit_day3"
            style="@style/VerticalRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/wednesday_short" />

        <CheckBox
            android:id="@+id/edit_day4"
            style="@style/VerticalRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/thursday_short" />

        <CheckBox
            android:id="@+id/edit_day5"
            style="@style/VerticalRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/friday_short" />

        <CheckBox
            android:id="@+id/edit_day6"
            style="@style/VerticalRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/saturday_short" />

        <CheckBox
            android:id="@+id/edit_day7"
            style="@style/VerticalRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/sunday_short" />
    </LinearLayout>

    <TextView
        android:id="@+id/start_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/tab_button_transition"
        android:padding="7dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingBottom="10dp"
        android:text="@string/qt_item_start_time"
        app:layout_constraintEnd_toStartOf="@+id/end_time_label"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_days" />

    <TextView
        android:id="@+id/end_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/tab_button_transition"
        android:padding="7dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingBottom="10dp"
        android:text="@string/qt_item_end_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/start_time_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_days" />

    <TimePicker
        android:id="@+id/edit_time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:descendantFocusability="blocksDescendants"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toTopOf="@+id/edit_silence_mode_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_time_label"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <RadioGroup
        android:id="@+id/edit_silence_mode_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_time_picker">

        <RadioButton
            android:id="@+id/edit_vibrate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:checked="true"
            android:text="@string/vibrate" />

        <RadioButton
            android:id="@+id/edit_mute_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/mute" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>